--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>MessageBoard</title>
-    <%= csrf_meta_tags %>
+    <%= csrf_meta_tags  %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container">
+    
+      <%= render 'layouts/flash_messages' %>
+
+      <%= yield %>
+
+    </div>
+
   </body>
 </html>
