--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -8,7 +8,7 @@
   <%= @message.content %>
 </p>
 
-<%= link_to '一覧に戻る', messages_path %>
+<%= link_to '一覧に戻る', root_path %>
 
 <%= link_to 'このメッセージを編集する', edit_message_path(@message) %>
 
