--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
   <% @messages.each do |message| %>
 
     <li>
-      <%= link_to message_id, message %>
+      <%= link_to message.id, message %>
       <%= message.content %>
     </li>
 
