--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,14 +1,5 @@
 <h1>メッセージ新規作成ページ</h1>
 
-<%= form_for(@message) do |f| %>
+<%= render 'form', message: @message %>
 
-  <%= f.label :content, 'メッセージ' %>
-
-  <%= f.text_field :content %>
-
-
-  <%= f.submit '投稿' %>
-
-<% end %>
-
-<%= link_to '一覧に戻る', messages_path %>
+<%= link_to '一覧に戻る', root_path %>
