titleカラムの追加

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -16,9 +16,14 @@
   <% end %>
   <%# ------------------------ %>
 
+  <%= f.label :title, 'タイトル' %>
+
+  <%= f.text_field :title, autocomplete: 'off' %>
+
+
   <%= f.label :content, 'メッセージ' %>
 
-  <%= f.text_field :content %>
+  <%= f.text_field :content, autocomplete: 'off' %>
 
 
   <%= f.submit '投稿' %>
