--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -4,7 +4,11 @@
   id: <%= @message.id %> の詳細ページ
 </h1>
 
-<p>
+<p>タイトル：
+  <%= @message.title %>
+</p>
+
+<p>メッセージ：
   <%= @message.content %>
 </p>
 
