--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,6 +5,9 @@
 
     <li>
       <%= link_to message.id, message %>
+
+      <%= message.title %>
+      &gt;
       <%= message.content %>
     </li>
 
