--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,31 +1,37 @@
-<%= form_for(message) do |f| %>
+<div class="row">
+  <div class="col-xs-6">
 
-  <%# -----エラーメッセージ----- %>
-  <% if message.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-        <% message.errors.full_messages.each do |message| %>
+    <%= form_for(message) do |f| %>
 
-          <li>
-            <%= message %>
-          </li>
+      <%# -----エラーメッセージ----- %>
+      <% if message.errors.any? %>
+        <div class="alert alert-warning">
+          <ul>
+            <% message.errors.full_messages.each do |message| %>
 
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <%# ------------------------ %>
+              <li>
+                <%= message %>
+              </li>
 
-  <%= f.label :title, 'タイトル' %>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <%# ------------------------ %>
 
-  <%= f.text_field :title, autocomplete: 'off' %>
+      <div class="form-group">
+        <%= f.label :title, 'タイトル' %>
+        <%= f.text_field :title, class: 'form-control', autocomplete: 'off' %>
+      </div>
 
+      <div class="form-group">
+        <%= f.label :content, 'メッセージ' %>
+        <%= f.text_field :content, class: 'form-control', autocomplete: 'off' %>
+      </div>
 
-  <%= f.label :content, 'メッセージ' %>
+      <%= f.submit '投稿', class: 'btn btn-primary' %>
 
-  <%= f.text_field :content, autocomplete: 'off' %>
+    <% end %>
 
-
-  <%= f.submit '投稿' %>
-
-<% end %>
+  </div>
+</div>
